--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <artifactId>rest-utils-parent</artifactId>
         <groupId>io.confluent</groupId>
-        <version>${revision}</version>
+        <version>6.0.0-0</version>
     </parent>
 
     <groupId>io.confluent</groupId>
